# rust-game-of-the-generals

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_players_table.sql  0002_games_table.sql  0003_pieces_table.sql
src/: board.rs  game.rs  main.rs  piece.rs  player.rs
src/queries/: queries.rs
